# mini-vLLM

./: README.md  pyproject.toml  requirements.txt
benchmarks/: bench_gptq.py  bench_kernel.py  bench_prefix_cache.py  bench_speculative.py  bench_throughput.py  bench_vs_production.py  eval_humaneval.py  run_benchmark.py  schema.py  stress_async_server.py  stress_long_run.py  validate_runtime.py
configs/: throughput_a100.yaml
configs/benchmarks/: a100_single_gpu_8b.json  h100_single_gpu_8b.json
deployment/: modal_benchmark.py  modal_serve.py
examples/: generate.py  modal_app.py
mini_vllm/: __init__.py  attention.py  attention_metadata.py  block_manager.py  config.py  engine.py  fp8.py  lookahead.py  lora.py  metrics.py  model_loader.py  model_runner.py  parallel.py  prefix_cache.py  sampling.py  scheduler.py  sequence.py
mini_vllm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mini_vllm/backends/: __init__.py
mini_vllm/distill/: __init__.py  analyze_sweep.py  dataset.py  distill_loss.py  (+4 more)
results/: methodology.md  quality_eval.md  vs_production.md
scripts/: run_a100_all.sh  run_distillation.sh  run_gpu_matrix.sh  run_h100_all.sh  slurm_distill.sbatch  slurm_full_pipeline.sbatch  slurm_sweep_depth.sbatch  summarize_logs.sh  sweep_draft_depth.sh
tests/: test_attention_backend.py  test_block_manager.py  test_distill.py  test_fp8.py  test_gptq.py  test_lora.py  test_metrics.py  test_package_init.py  test_paged_attention_kernel.py  test_parity_with_hf.py  test_prefix_cache.py  test_sampling.py  test_scheduler.py  test_tier1_features.py
(+17 files in other folders)
