[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-vllm"
version = "0.1.0"
description = "Paged KV-cache inference engine with continuous batching and paged attention."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.1.0",
    "triton>=2.1.0",
    "transformers>=4.40.0",
    "safetensors",
    "numpy",
]

[project.optional-dependencies]
bench = ["datasets", "scipy", "httpx"]
deploy = ["modal"]
serve = ["fastapi", "uvicorn[standard]", "pydantic"]
test  = ["pytest"]

[tool.setuptools.packages.find]
include = ["mini_vllm*"]
